# bandit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bandit-pipeline.yaml  bandit-service.yaml  security-scan.yml
apps/bandit-pipeline/: Dockerfile  constraints.txt  dagster.yaml  requirements-docker.txt  requirements-lock.txt  requirements.txt
apps/bandit-pipeline/pipeline/: repository.py
apps/bandit-pipeline/pipeline/jobs/: compute_regret.py  conclude_experiments.py  evaluate_ope.py  ingest_obp.py  obp_replay.py  snapshot_posteriors.py
apps/bandit-service/: Dockerfile  requirements.txt
apps/bandit-service/service/: bandit.py  main.py  stopping.py
docs/: architecture.md
k8s/datasci/bandit/: ks.yaml
k8s/datasci/bandit/app/: externalsecret.yaml  kustomization.yaml
k8s/datasci/bandit/app/db/: postgres.yaml
k8s/datasci/bandit/app/pipeline/: deployment.yaml  service.yaml
k8s/datasci/bandit/app/seldon/: seldondeployment.yaml
k8s/datasci/bandit/app/service/: deployment.yaml  ingress.yaml  service.yaml
