[project]
name = "bandit"
version = "0.1.0"
description = "Thompson Sampling for Adaptive Experimentation — bandit-service + bandit-pipeline"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # bandit-service
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "prometheus-fastapi-instrumentator>=6.1",
    # bandit-pipeline (Dagster CLI + run UI; jobs need these at import time)
    "dagster>=1.8",
    "dagster-postgres>=0.24",
    "dagster-webserver>=0.24",
    "mlflow>=2.14",
    "boto3>=1.34",
    "pyarrow>=16.0",
    "httpx>=0.27",
    "scipy>=1.13",
    # shared
    "redis>=5.0",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
# OBP only (pulls old transitive deps; best on Linux/CI or WSL)
pipeline = [
    "obp>=0.5",
]

[tool.uv]
dev-dependencies = []
override-dependencies = [
    "torch>=2.0,<3",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "scikit-learn>=1.0",  # mlflow can pull old versions without Windows wheels
]
